@@ -15,6 +15,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -55,18 +56,17 @@ class ProductServiceTest {
         @DisplayName("returns mapped DTOs for every product in repository")
         void returnsAllProducts() {
             when(productRepository.findAll()).thenReturn(List.of(sampleProduct));
-
             ProductListResponse result = productService.getAllProducts();
-
             assertThat(result.getProducts().getFirst().getName()).isEqualTo("Wireless Mouse");
             verify(productRepository).findAll();
         }
 
         @Test
-        @DisplayName("returns empty list when repository is empty")
-        void returnsEmptyList() {
-            when(productRepository.findAll()).thenReturn(List.of());
-            assertThat(productService.getAllProducts()).asList();
+        @DisplayName("should return empty list when repository has no products")
+        void shouldReturnEmptyList() {
+            when(productRepository.findAll()).thenReturn(Collections.emptyList());
+            List<ProductResponse> result = productService.getAllProducts().getProducts();
+            assertThat(result).isEmpty();
         }
     }
 
